--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,11 @@ dev_dependencies:
   flutter_launcher_icons: "^0.7.3"
   build_runner:
 
+dependency_overrides:
+  # fix `packageRoot`compile error for iOS, because `path_provider` is using an old version of `platform`
+  platform: ^3.1.0 # overrides `path_provider`
+
+
 flutter_icons:
   android: "launcher_icon" 
   ios: true
